[gd_scene load_steps=5 format=3 uid="uid://l24vmjtk2ixm"]

[ext_resource type="Script" path="res://test_map.gd" id="1_27lue"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ucplk"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_adq52"]
sky_material = SubResource("ProceduralSkyMaterial_ucplk")

[sub_resource type="Environment" id="Environment_mdl27"]
background_mode = 2
sky = SubResource("Sky_adq52")
tonemap_mode = 2
glow_enabled = true

[node name="Test_map" type="Node3D"]
script = ExtResource("1_27lue")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mdl27")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="floor_spawner" type="Node3D" parent="."]

[node name="Enemy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15482, 0)

[node name="spawner1" type="Node3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.95735)

[node name="spawner2" type="Node3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.87517)

[node name="wall_spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19439, 0)

[node name="spawner1" type="Node3D" parent="wall_spawner"]
transform = Transform3D(0.506786, 0, -0.862072, 0, 1, 0, 0.862072, 0, 0.506786, 0.96378, 0, -4.75564)

[node name="spawner2" type="Node3D" parent="wall_spawner"]
transform = Transform3D(0.311821, 0, 0.950141, 0, 1, 0, -0.950141, 0, 0.311821, 5.97812, 0, 1.74003)

[node name="spawner3" type="Node3D" parent="wall_spawner"]
transform = Transform3D(-0.0731859, 0, 0.997318, 0, 1, 0, -0.997318, 0, -0.0731859, -3.40952, 0, 1.6643)

[node name="spawner4" type="Node3D" parent="wall_spawner"]
transform = Transform3D(0.430007, 0, -0.902826, 0, 1, 0, 0.902826, 0, 0.430007, 0.180372, 0, 5.14054)

[node name="spawner5" type="Node3D" parent="wall_spawner"]
transform = Transform3D(0.667079, 0, -0.744987, 0, 1, 0, 0.744987, 0, 0.667079, 5.71468, 0, -2.39652)

[node name="spawner6" type="Node3D" parent="wall_spawner"]
transform = Transform3D(-0.378762, 0, -0.925494, 0, 1, 0, 0.925494, 0, -0.378762, -4.41819, 0, -4.2255)

[node name="prop_spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.697706, 0)

[node name="spawner1" type="Node3D" parent="prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.57335, 0, 0)

[node name="spawner2" type="Node3D" parent="prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.72622, 0, 0)

[node name="spawner3" type="Node3D" parent="prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.71877, 0, 3.87572)

[node name="spawner4" type="Node3D" parent="prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32618, 0, -3.70647)

[node name="spawner5" type="Node3D" parent="prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.21566, 0, 0.439772)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.55702e-08, -0.581214, 0.813751, -2.54057e-08, 0.813751, 0.581214, -1, 0, -4.37114e-08, 10.2887, 7.61767, 0)
